--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -91,7 +91,7 @@ Run WeInstall c#brage in your game folder to install the mod. Then run wine BGMa
 <h1><a name="compat" id="compat">Compatibility with other mods</a></h1>
 <div class="section">
 Brage's Redemption was implemented with WeiDU with highest priority to compatibility with other mods. However, the BG1 quest should be installed before the BG1NPC Project so no added reply options will be overwritten. For this, either install the mod's main component before BG1NPC Project. You also have the possibility to install the beginnings quest via the <a href="https://www.baldurs-gate.de/index.php?resources/jasteys-baldurs-gate-mini-quests-and-begegnungen-modifikation.17/">Baldur's Gate Mini Quests and Encounters Mod (bgqe, component "Brage's Sword")</a> If the quest was installed via bgqe, it will be detected accordingly when installing Brage's Redemption Mod.<br />
-The Crossmod component should be installed after all other mods so the crossmod content gets installed. List of mods with crossmod for v9.0: AC_QUEST, AjantisBG1, AjantisBG2, BG1NPC, bg1re, bg1ub, bgqe, bst, c#sodboabri, c#endlessbg1, EET, FinchNPC, imoen4ever, ntotsc, transitions. Crossmod with Thalantyr's Item Upgrade is included into the Crossmod component but independent on install order.<br />
+The Crossmod component should be installed after all other mods so the crossmod content gets installed. List of mods with crossmod for v9.0: AC_QUEST, AjantisBG1, AjantisBG2, BG1NPC, bg1re, bg1ub, bgqe, bst, c#sodboabri, c#endlessbg1, EET, FinchNPC, imoen4ever, ntotsc, sotsc, transitions. Crossmod with Thalantyr's Item Upgrade is included into the Crossmod component but independent on install order.<br />
 Note that the install order syntax for Project Infinity only contains the crucial dependncies for the main mod component. Make sure to install the crossmod component late enough so all crossmod will be included.<br />
 Please note: For Brage to react to game events in SoD accordingly, the main component (Tracking System, 2nd component) of "Road to Discovery" needs to be installed.<br />
 </div>
@@ -210,6 +210,10 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Version History</a></h1>
 <div class="section">
+Version 9.1:</br>
+- Journal entries when receiving the quest items from Borda should be written into journal.</br>
+- Crossmod with SotSC added: crying woman in Nashkel mine area.</br>
+</br>
 Version 9.0:</br>
 - German version completed, by Shai Hulud, proofread by jastey.</br>
 - New component: "Give Brage unique Two-Handed Sword +1" (for BG1 part only).</br>
