--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -90,7 +90,7 @@ Lasst WeInstall c#brage in Euren Spielordner laufen, um die Modifikation zu inst
 <h1><a name="compat" id="compat">Kompatiblit&auml;t mit anderen Mods</a></h1>
 <div class="section">
 Brage's Redemption wurde mit WeiDU und mit dem Anspruch gr&ouml;&szlig;tm&ouml;glicher Kompatibilit&auml;t mit anderen Mods erstellt. Die Mod sollte jedoch vor dem BG1NPC Projekt installiert werden, damit die M&ouml;glichkeit, Brage auch Oublek auszuliefern, nicht &uuml;berschrieben wird. Dies kann auch erreicht werden, indem die Komponente "Brages Schwert" der <a href="https://www.baldurs-gate.de/index.php?resources/jasteys-baldurs-gate-mini-quests-and-begegnungen-modifikation.17/">Baldur's Gate Mini Quests and Encounters Mod (bgqe)</a> vor dem BG1NPC Project installiert wird. Wird der Quest durch bgqe installiert, wird er von der Mod Brage's Redemption entsprechend erkannt.<br />
-Die Crossmod-Komponente sollte nach allen anderen Mods installiert werden, damit der Crossmod-Inhalt installiert wird. Liste der Mods mit Crossmod f&uuml;r v9.0: AC_QUEST, AjantisBG1, AjantisBG2, BG1NPC, bg1re, bg1ub, bgqe, bst, c#sodboabri, c#endlessbg1, EET, FinchNPC, imoen4ever, ntotsc, transitions. Crossmod mit Thalantyr's Item Upgrade ist in der Crossmod-Komponente enthalten aber unabhängig von der Installationsreihenfolge.<br />
+Die Crossmod-Komponente sollte nach allen anderen Mods installiert werden, damit der Crossmod-Inhalt installiert wird. Liste der Mods mit Crossmod f&uuml;r v9.0: AC_QUEST, AjantisBG1, AjantisBG2, BG1NPC, bg1re, bg1ub, bgqe, bst, c#sodboabri, c#endlessbg1, EET, FinchNPC, imoen4ever, ntotsc, sotsc, transitions. Crossmod mit Thalantyr's Item Upgrade ist in der Crossmod-Komponente enthalten aber unabhängig von der Installationsreihenfolge.<br />
 Achtung: Die Syntax der Installationsreihenfolge für Project Infinity enthält nur die entscheidenden Abhängigkeiten für die Hauptmodkomponente. Die Crossmod-Komponente muss spät genug installiert werden, damit aller Crossmod enthalten ist.<br />
 Bitte beachten: damit Brage in SoD entsprechend auf die Spielereignisse reagiert, muss die Hauptkomponente (2. Komponente, das "Trackingsystem") der Mod "Road to Discovery" installiert sein.<br />
 </div>
@@ -210,6 +210,10 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Versionshistorie</a></h1>
 <div class="section">
+Version 9.1:</br>
+- Journal entries when receiving the quest items from Borda should be written into journal.</br>
+- Crossmod with SotSC added: crying woman in Nashkel mine area.</br>
+</br>
 Version 9.0:</br>
 - German version completed, by Shai Hulud, proofread by jastey.</br>
 - New component: "Give Brage unique Two-Handed Sword +1" (for BG1 part only).</br>
