--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -176,7 +176,7 @@ Note: For the case that the merchant Borda was not killed upon the first meeting
 </br>
 <strong>Shai Hulud:</strong> German translator.</br>
 Italian Translation by <strong>Coland</strong>, proofread by <strong>Colmar</strong>. Completed and revised by <strong>improb@bile</strong> (v10).</br>
-Simplified Chinese version by <strong>Lzw104522773</strong> (v9.1).</br>
+Simplified Chinese version by <strong>Lzw104522773</strong> (v10.0).</br>
 </br>
 Thanks to BioWare, Black Isle and Wizards of the Coast for Baldur's Gate 1, 2 and the Infinity Engine, and BeamDog for the revival of the games including the SoD campaign.</br>
 Thanks to Kerzenburgforum for hosting the mod and giving a place for exchange of ideas.</br>
@@ -219,7 +219,7 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 <div class="section">
 Version 10.0:</br>
 - Intro quest "Brage's Sword" is removed from this mod. bgqe component "Brage's Sword" is now a prerequisite for Brage's Redemption mod.</br>
-- Simplified Chinese version added (v9.1), by Lzw104522773.</br>
+- Simplified Chinese version added, by Lzw104522773.</br>
 - Italian version completed (v9.1), by improb@bile.</br>
 - In case Brage joins late or is not present if Davaeorn is defeated: open up trigger of his reaction to advance his story.</br>
 - Crossmod with bgqe "Babysitting Quest": correted mixup of Sarah's and Tom's lines.</br>
