--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -175,7 +175,7 @@ Hinweis: Falls man Borda bei der Originalbegegnung beim Xvartdorf nicht get&ouml
 </br>
 <strong>Shai Hulud:</strong> &Uuml;bersetzer (deutsch).</br>
 Italienische Übersetzung von <strong>Coland</strong>, korrekturgelesen von <strong>Colmar</strong>. Vervollst&auml;ndigt und &uuml;berarbeitet von <strong>improb@bile</strong> (v10).</br>
-Simplified Chinese Version von <strong>Lzw104522773</strong> (v9.1).</br>
+Simplified Chinese Version von <strong>Lzw104522773</strong> (v10.0).</br>
 </br>
 Danke an BioWare, Black Isle und Wizards of the Coast f&uuml;r Baldur's Gate 1, 2 und die Infinity Engine, und BeamDog f&uuml;r das Neuauflegen der Spiele.</br>
 Danke ans Kerzenburgforum f&uuml;r das Hosten der Mod und das Bereitstellen von Austauschm&ouml;glichkeiten mit anderen Moddern und Spielern.</br>
@@ -217,7 +217,7 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 <div class="section">
 Version 10.0:</br>
 - Intro quest "Brage's Sword" is removed from this mod. bgqe component "Brage's Sword" is now a prerequisite for Brage's Redemption mod.</br>
-- Simplified Chinese version added (v9.1), by Lzw104522773.</br>
+- Simplified Chinese version added, by Lzw104522773.</br>
 - Italian version completed (v9.1), by improb@bile.</br>
 - In case Brage joins late or is not present if Davaeorn is defeated: open up trigger of his reaction to advance his story.</br>
 - Crossmod with bgqe "Babysitting Quest": correted mixup of Sarah's and Tom's lines.</br>
