--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -217,6 +217,12 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Version History</a></h1>
 <div class="section">
+Version 10.1:</br>
+- Encoding errors fixed (German version).</br>
+- Removed AreaCheck() from area script (bd4300).</br>
+- Prepared crossmod with bst to make it compatible with upcoming v1, too.</br>
+- typo corrections (Simplified Chinese), by yoshimo0417.</br>
+</br>
 Version 10.0:</br>
 - Intro quest "Brage's Sword" is removed from this mod. bgqe component "Brage's Sword" is now a prerequisite for Brage's Redemption mod.</br>
 - Simplified Chinese version added, by Lzw104522773.</br>
