--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -175,8 +175,8 @@ Note: For the case that the merchant Borda was not killed upon the first meeting
 <strong>Lumorus:</strong> ideas. Thank you for the idea of making Brage an NPC and pointing out that he is from Amn (which makes meeting him in BGII so much more natural.) Without it I would not have started working on this mod!</br> 
 </br>
 <strong>Shai Hulud:</strong> German translator.</br>
-Italian Translation by <strong>Coland</strong>, proofread by <strong>Colmar</strong>. Completed and revised by <strong>improb@bile</strong> (v10).</br>
-Simplified Chinese version by <strong>Lzw104522773</strong> (v10.0).</br>
+Italian Translation by <strong>Coland</strong>, proofread by <strong>Colmar</strong>. Completed and revised by <strong>improb@bile</strong> (v10.1).</br>
+Simplified Chinese version by <strong>Lzw104522773</strong> (v10.1).</br>
 </br>
 Thanks to BioWare, Black Isle and Wizards of the Coast for Baldur's Gate 1, 2 and the Infinity Engine, and BeamDog for the revival of the games including the SoD campaign.</br>
 Thanks to Kerzenburgforum for hosting the mod and giving a place for exchange of ideas.</br>
@@ -221,6 +221,8 @@ Version 10.1:</br>
 - Encoding errors fixed (German version).</br>
 - Removed AreaCheck() from area script (bd4300).</br>
 - Prepared crossmod with bst to make it compatible with upcoming v1, too.</br>
+- crossmod with bg1re's component "Bardolan's Briefing": unified number of his daughters to three, not two. (Italian: improb@bile, Simplified Chinese: yoshimo0417)</br>
+- more BGII content added (untested)</br>
 - typo corrections (Simplified Chinese), by yoshimo0417.</br>
 </br>
 Version 10.0:</br>
