--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -174,8 +174,8 @@ Hinweis: Falls man Borda bei der Originalbegegnung beim Xvartdorf nicht get&ouml
 <strong>Lumorus:</strong> Danke f&uuml;r die Idee, aus Brage einen NSC zu machen und den Hinweis, dass er ja aus Amn kommt und man ihn daher ohne Verrenkungen in BGII in Atkatla wiedertreffen kann. Ohne h&auml;tte ich an dieser Mod nicht gearbeitet!</br> 
 </br>
 <strong>Shai Hulud:</strong> &Uuml;bersetzer (deutsch).</br>
-Italienische Übersetzung von <strong>Coland</strong>, korrekturgelesen von <strong>Colmar</strong>. Vervollst&auml;ndigt und &uuml;berarbeitet von <strong>improb@bile</strong> (v10).</br>
-Simplified Chinese Version von <strong>Lzw104522773</strong> (v10.0).</br>
+Italienische Übersetzung von <strong>Coland</strong>, korrekturgelesen von <strong>Colmar</strong>. Vervollst&auml;ndigt und &uuml;berarbeitet von <strong>improb@bile</strong> (v10.1).</br>
+Simplified Chinese Version von <strong>Lzw104522773</strong> (v10.1).</br>
 </br>
 Danke an BioWare, Black Isle und Wizards of the Coast f&uuml;r Baldur's Gate 1, 2 und die Infinity Engine, und BeamDog f&uuml;r das Neuauflegen der Spiele.</br>
 Danke ans Kerzenburgforum f&uuml;r das Hosten der Mod und das Bereitstellen von Austauschm&ouml;glichkeiten mit anderen Moddern und Spielern.</br>
@@ -215,6 +215,14 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Versionshistorie</a></h1>
 <div class="section">
+Version 10.1:</br>
+- Encoding errors fixed (German version).</br>
+- Removed AreaCheck() from area script (bd4300).</br>
+- Prepared crossmod with bst to make it compatible with upcoming v1, too.</br>
+- crossmod with bg1re's component "Bardolan's Briefing": unified number of his daughters to three, not two. (Italian: improb@bile, Simplified Chinese: yoshimo0417)</br>
+- more BGII content added (untested)</br>
+- typo corrections (Simplified Chinese), by yoshimo0417.</br>
+</br>
 Version 10.0:</br>
 - Intro quest "Brage's Sword" is removed from this mod. bgqe component "Brage's Sword" is now a prerequisite for Brage's Redemption mod.</br>
 - Simplified Chinese version added, by Lzw104522773.</br>
