--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -217,9 +217,10 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 <div class="section">
 Version 10.1:</br>
 - Encoding errors fixed (German version).</br>
+- Removed dependency on bgqe for BGII(:EE).</br>
 - Removed AreaCheck() from area script (bd4300).</br>
 - Prepared crossmod with bst to make it compatible with upcoming v1, too.</br>
-- crossmod with bg1re's component "Bardolan's Briefing": unified number of his daughters to three, not two. (Italian: improb@bile, Simplified Chinese: yoshimo0417)</br>
+- crossmod with bg1re's component "Bardolan's Briefing": unified number of his daughters to three, not two. (Italian: improb@bile, Simplified Chinese: yoshimo0417).</br>
 - more BGII content added (untested)</br>
 - typo corrections (Simplified Chinese), by yoshimo0417.</br>
 </br>
